--- a/Notebooks/Suicide_analysis.ipynb
+++ b/Notebooks/Suicide_analysis.ipynb
@@ -2636,7 +2636,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "45ebf2f5",
+   "id": "c9834119",
    "metadata": {},
    "outputs": [
     {
@@ -2657,7 +2657,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "bf790654",
+   "id": "778dec1c",
    "metadata": {},
    "outputs": [
     {
@@ -2679,7 +2679,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "f12ca054",
+   "id": "0772e1a9",
    "metadata": {},
    "outputs": [
     {
@@ -2870,7 +2870,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "7148f7e5",
+   "id": "75888c9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2880,7 +2880,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "195a4eff",
+   "id": "defd0ff1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2890,7 +2890,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "a0ceb21e",
+   "id": "98237c36",
    "metadata": {},
    "outputs": [
     {
@@ -2987,7 +2987,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "84b6b00b",
+   "id": "f7980bcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2997,7 +2997,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "b4c83008",
+   "id": "7a98d2ec",
    "metadata": {},
    "outputs": [
     {
@@ -3093,13 +3093,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "15e07fcd",
+   "execution_count": 107,
+   "id": "864724ed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Causes.to_csv"
+    "Causes.to_csv('../Datasets/Suicide/Causes.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4e96301",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
