--- a/Notebooks/PL.ipynb
+++ b/Notebooks/PL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "e00fb900",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "93d2bf83",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "d2990a95",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "571d4955",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
        "[547 rows x 34 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "71f90f0a",
    "metadata": {},
    "outputs": [
@@ -432,7 +432,7 @@
        "       'Matches', '-9999'], dtype=object)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "6d77caf2",
    "metadata": {},
    "outputs": [],
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "fd3f08a9",
    "metadata": {},
    "outputs": [
@@ -814,7 +814,7 @@
        "[547 rows x 34 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "id": "ae99823f",
    "metadata": {},
    "outputs": [],
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "fae9901c",
    "metadata": {},
    "outputs": [],
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "id": "87a2df22",
    "metadata": {},
    "outputs": [],
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "id": "afdcda45",
    "metadata": {},
    "outputs": [
@@ -1243,7 +1243,7 @@
        "[546 rows x 33 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "id": "329a46d3",
    "metadata": {},
    "outputs": [
@@ -1367,7 +1367,7 @@
        "[546 rows x 2 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1378,8 +1378,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "56e89e29",
+   "execution_count": 13,
+   "id": "5db237fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1388,8 +1388,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "478f3fcc",
+   "execution_count": 14,
+   "id": "602b401d",
    "metadata": {},
    "outputs": [
     {
@@ -1776,7 +1776,7 @@
        "[546 rows x 31 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1787,8 +1787,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "b838b2a6",
+   "execution_count": 15,
+   "id": "11e17e40",
    "metadata": {},
    "outputs": [
     {
@@ -1807,7 +1807,7 @@
        "       'cl CHI', 'bf BFA', 'nz NZL'], dtype=object)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1818,8 +1818,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "a8544fb9",
+   "execution_count": 16,
+   "id": "f68e0303",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1828,8 +1828,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "fb8f8e82",
+   "execution_count": 17,
+   "id": "70149c79",
    "metadata": {},
    "outputs": [
     {
@@ -1838,7 +1838,7 @@
        "'ENG'"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1849,8 +1849,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "c06a62e6",
+   "execution_count": 18,
+   "id": "a26f04f2",
    "metadata": {},
    "outputs": [
     {
@@ -1871,7 +1871,7 @@
        "Name: Nation, Length: 546, dtype: int64"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1882,8 +1882,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "c6c8d83c",
+   "execution_count": 19,
+   "id": "978064e1",
    "metadata": {},
    "outputs": [
     {
@@ -1892,7 +1892,7 @@
        "546"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1903,8 +1903,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "457017bb",
+   "execution_count": 20,
+   "id": "02c5d5b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1917,574 +1917,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "id": "4590609f",
+   "execution_count": 21,
+   "id": "b5817108",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ENG',\n",
-       " 'SCO',\n",
-       " 'FRA',\n",
-       " 'NOR',\n",
-       " 'NED',\n",
-       " 'ENG',\n",
-       " 'ESP',\n",
-       " 'ENG',\n",
-       " 'BRA',\n",
-       " 'BRA',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'PAR',\n",
-       " 'ESP',\n",
-       " 'COL',\n",
-       " 'GHA',\n",
-       " 'DEN',\n",
-       " 'JAM',\n",
-       " 'ENG',\n",
-       " 'FRA',\n",
-       " 'ENG',\n",
-       " 'SCO',\n",
-       " 'ESP',\n",
-       " 'SCO',\n",
-       " 'GAB',\n",
-       " 'GHA',\n",
-       " 'ENG',\n",
-       " 'ESP',\n",
-       " 'AUT',\n",
-       " 'JAM',\n",
-       " 'CIV',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'GRN',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'DEN',\n",
-       " 'POL',\n",
-       " 'NED',\n",
-       " 'NED',\n",
-       " 'BIH',\n",
-       " 'ALG',\n",
-       " 'URU',\n",
-       " 'BEL',\n",
-       " 'ISL',\n",
-       " 'NED',\n",
-       " 'ENG',\n",
-       " 'DEN',\n",
-       " 'MLI',\n",
-       " 'CIV',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ALB',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ESP',\n",
-       " 'ARG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ARG',\n",
-       " 'ECU',\n",
-       " 'ENG',\n",
-       " 'WAL',\n",
-       " 'POR',\n",
-       " 'ESP',\n",
-       " 'ENG',\n",
-       " 'POL',\n",
-       " 'BEL',\n",
-       " 'ESP',\n",
-       " 'NIR',\n",
-       " 'URU',\n",
-       " 'BRA',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'POR',\n",
-       " 'ENG',\n",
-       " 'DEN',\n",
-       " 'ENG',\n",
-       " 'IRL',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'IRL',\n",
-       " 'IRL',\n",
-       " 'IRL',\n",
-       " 'SCO',\n",
-       " 'ENG',\n",
-       " 'CIV',\n",
-       " 'ANG',\n",
-       " 'CZE',\n",
-       " 'BRA',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'COL',\n",
-       " 'ESP',\n",
-       " 'ENG',\n",
-       " 'ZAM',\n",
-       " 'NIR',\n",
-       " 'POR',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'WAL',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'BEL',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'BEL',\n",
-       " 'NGA',\n",
-       " 'ENG',\n",
-       " 'FRA',\n",
-       " 'POR',\n",
-       " 'COL',\n",
-       " 'ENG',\n",
-       " 'FRA',\n",
-       " 'FRA',\n",
-       " 'FRA',\n",
-       " 'MLI',\n",
-       " 'ENG',\n",
-       " 'IRL',\n",
-       " 'BRA',\n",
-       " 'MLI',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'SVK',\n",
-       " 'IRL',\n",
-       " 'WAL',\n",
-       " 'ENG',\n",
-       " 'BRA',\n",
-       " 'FRA',\n",
-       " 'ENG',\n",
-       " 'SWE',\n",
-       " 'ENG',\n",
-       " 'EGY',\n",
-       " 'NOR',\n",
-       " 'BRA',\n",
-       " 'DEN',\n",
-       " 'NGA',\n",
-       " 'NIR',\n",
-       " 'ENG',\n",
-       " 'POL',\n",
-       " 'BRA',\n",
-       " 'ESP',\n",
-       " 'IRL',\n",
-       " 'ENG',\n",
-       " 'POR',\n",
-       " 'ESP',\n",
-       " 'ARG',\n",
-       " 'BRA',\n",
-       " 'BRA',\n",
-       " 'ESP',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'FRA',\n",
-       " 'ESP',\n",
-       " 'ENG',\n",
-       " 'FIN',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'GHA',\n",
-       " 'SCO',\n",
-       " 'BRA',\n",
-       " 'ENG',\n",
-       " 'NOR',\n",
-       " 'ENG',\n",
-       " 'ESP',\n",
-       " 'ENG',\n",
-       " 'CIV',\n",
-       " 'ESP',\n",
-       " 'ENG',\n",
-       " 'NED',\n",
-       " 'NED',\n",
-       " 'IRN',\n",
-       " 'GRE',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'SCO',\n",
-       " 'ENG',\n",
-       " 'POR',\n",
-       " 'POR',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'GER',\n",
-       " 'ESP',\n",
-       " 'ENG',\n",
-       " 'BRA',\n",
-       " 'GER',\n",
-       " 'ENG',\n",
-       " 'SCO',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'GER',\n",
-       " 'ENG',\n",
-       " 'KOR',\n",
-       " 'ENG',\n",
-       " 'IRL',\n",
-       " 'WAL',\n",
-       " 'ENG',\n",
-       " 'KOR',\n",
-       " 'NED',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'DEN',\n",
-       " 'IRL',\n",
-       " 'NGA',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'NGA',\n",
-       " 'WAL',\n",
-       " 'WAL',\n",
-       " 'ENG',\n",
-       " 'GER',\n",
-       " 'SWE',\n",
-       " 'DEN',\n",
-       " 'BRA',\n",
-       " 'MEX',\n",
-       " 'BRA',\n",
-       " 'BRA',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ITA',\n",
-       " 'POR',\n",
-       " 'ENG',\n",
-       " 'DEN',\n",
-       " 'TUR',\n",
-       " 'BEL',\n",
-       " 'NGA',\n",
-       " 'CIV',\n",
-       " 'ENG',\n",
-       " 'FRA',\n",
-       " 'COD',\n",
-       " 'ITA',\n",
-       " 'ENG',\n",
-       " 'GUI',\n",
-       " 'IRL',\n",
-       " 'BRA',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'NOR',\n",
-       " 'NOR',\n",
-       " 'POL',\n",
-       " 'GER',\n",
-       " 'BIH',\n",
-       " 'FRA',\n",
-       " 'ENG',\n",
-       " 'SEN',\n",
-       " 'CRO',\n",
-       " 'SWE',\n",
-       " 'CZE',\n",
-       " 'NED',\n",
-       " 'SVK',\n",
-       " 'SWE',\n",
-       " 'FRA',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ARG',\n",
-       " 'ESP',\n",
-       " 'ENG',\n",
-       " 'FRA',\n",
-       " 'ENG',\n",
-       " 'GER',\n",
-       " 'NIR',\n",
-       " 'SWE',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ESP',\n",
-       " 'FRA',\n",
-       " 'ARG',\n",
-       " 'NED',\n",
-       " 'ENG',\n",
-       " 'IRL',\n",
-       " 'IRL',\n",
-       " 'ENG',\n",
-       " 'NGA',\n",
-       " 'DEN',\n",
-       " 'MAR',\n",
-       " 'ENG',\n",
-       " 'BRA',\n",
-       " 'BEL',\n",
-       " 'BRA',\n",
-       " 'ARG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ALG',\n",
-       " 'ENG',\n",
-       " 'SEN',\n",
-       " 'ESP',\n",
-       " 'BRA',\n",
-       " 'ENG',\n",
-       " 'ESP',\n",
-       " 'FRA',\n",
-       " 'BRA',\n",
-       " 'ARG',\n",
-       " 'MAR',\n",
-       " 'COD',\n",
-       " 'ESP',\n",
-       " 'FRA',\n",
-       " 'SRB',\n",
-       " 'CMR',\n",
-       " 'FRA',\n",
-       " 'FRA',\n",
-       " 'SCO',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'SCO',\n",
-       " 'ENG',\n",
-       " 'SCO',\n",
-       " 'SCO',\n",
-       " 'SCO',\n",
-       " 'ENG',\n",
-       " 'SCO',\n",
-       " 'ENG',\n",
-       " 'TUN',\n",
-       " 'FRA',\n",
-       " 'SEN',\n",
-       " 'SEN',\n",
-       " 'FRA',\n",
-       " 'SRB',\n",
-       " 'ENG',\n",
-       " 'COL',\n",
-       " 'JPN',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'POL',\n",
-       " 'BRA',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'BRA',\n",
-       " 'POR',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ZAM',\n",
-       " 'UKR',\n",
-       " 'ZIM',\n",
-       " 'NGA',\n",
-       " 'FRA',\n",
-       " 'ENG',\n",
-       " 'POR',\n",
-       " 'POR',\n",
-       " 'ENG',\n",
-       " 'ESP',\n",
-       " 'ENG',\n",
-       " 'CMR',\n",
-       " 'ENG',\n",
-       " 'NOR',\n",
-       " 'DEN',\n",
-       " 'ITA',\n",
-       " 'FRA',\n",
-       " 'SWE',\n",
-       " 'IRL',\n",
-       " 'ENG',\n",
-       " 'NGA',\n",
-       " 'BEL',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ITA',\n",
-       " 'GHA',\n",
-       " 'CIV',\n",
-       " 'POR',\n",
-       " 'ESP',\n",
-       " 'ENG',\n",
-       " 'FRA',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'NED',\n",
-       " 'JAM',\n",
-       " 'POR',\n",
-       " 'FRA',\n",
-       " 'ENG',\n",
-       " 'NIR',\n",
-       " 'FIN',\n",
-       " 'USA',\n",
-       " 'POL',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'BRA',\n",
-       " 'ENG',\n",
-       " 'KVX',\n",
-       " 'ESP',\n",
-       " 'ENG',\n",
-       " 'ESP',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'BRA',\n",
-       " 'NED',\n",
-       " 'SCO',\n",
-       " 'WAL',\n",
-       " 'WAL',\n",
-       " 'SCO',\n",
-       " 'WAL',\n",
-       " 'ESP',\n",
-       " 'ESP',\n",
-       " 'ENG',\n",
-       " 'DEN',\n",
-       " 'ARG',\n",
-       " 'ESP',\n",
-       " 'POR',\n",
-       " 'VEN',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'GER',\n",
-       " 'GER',\n",
-       " 'POR',\n",
-       " 'FRA',\n",
-       " 'MAR',\n",
-       " 'ENG',\n",
-       " 'EGY',\n",
-       " 'GHA',\n",
-       " 'BEL',\n",
-       " 'COL',\n",
-       " 'ESP',\n",
-       " 'ENG',\n",
-       " 'FRA',\n",
-       " 'BRA',\n",
-       " 'USA',\n",
-       " 'ECU',\n",
-       " 'SEN',\n",
-       " 'FRA',\n",
-       " 'ENG',\n",
-       " 'SUI',\n",
-       " 'GHA',\n",
-       " 'DEN',\n",
-       " 'SWE',\n",
-       " 'POR',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'CHI',\n",
-       " 'POR',\n",
-       " 'POR',\n",
-       " 'BRA',\n",
-       " 'ENG',\n",
-       " 'FRA',\n",
-       " 'ENG',\n",
-       " 'IRL',\n",
-       " 'ENG',\n",
-       " 'POR',\n",
-       " 'CZE',\n",
-       " 'FRA',\n",
-       " 'TUR',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'USA',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'WAL',\n",
-       " 'ENG',\n",
-       " 'NED',\n",
-       " 'NED',\n",
-       " 'DEN',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'POR',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'BRA',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'BEL',\n",
-       " 'SCO',\n",
-       " 'JPN',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ESP',\n",
-       " 'TUR',\n",
-       " 'ENG',\n",
-       " 'ESP',\n",
-       " 'BFA',\n",
-       " 'EGY',\n",
-       " 'POR',\n",
-       " 'ENG',\n",
-       " 'NGA',\n",
-       " 'BEL',\n",
-       " 'GRE',\n",
-       " 'ENG',\n",
-       " 'TUR',\n",
-       " 'GRE',\n",
-       " 'FRA',\n",
-       " 'NED',\n",
-       " 'FRA',\n",
-       " 'ENG',\n",
-       " 'NED',\n",
-       " 'DEN',\n",
-       " 'CRO',\n",
-       " 'CZE',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'WAL',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'NED',\n",
-       " 'ENG',\n",
-       " 'GER',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'WAL',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'COD',\n",
-       " 'NZL',\n",
-       " 'NZL',\n",
-       " 'ENG',\n",
-       " 'SUI',\n",
-       " 'UKR',\n",
-       " 'ENG',\n",
-       " 'ENG',\n",
-       " 'CIV',\n",
-       " 'GER',\n",
-       " 'UKR',\n",
-       " 'MAR',\n",
-       " 'FRA',\n",
-       " 'NOR']"
+       "['ENG', 'SCO', 'FRA', 'NOR', 'NED', 'ENG', 'ESP', 'ENG', 'BRA', 'BRA']"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r"
+    "r[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "id": "a179cfb3",
+   "execution_count": 22,
+   "id": "c5c540c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2493,8 +1948,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "id": "9f0b25e4",
+   "execution_count": 28,
+   "id": "dc23a8ea",
    "metadata": {},
    "outputs": [
     {
@@ -2881,7 +2336,7 @@
        "[546 rows x 31 columns]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2892,11 +2347,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "id": "c46266b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['DF', 'FW', 'FWDF', 'MF', 'GK', 'MFFW', 'FWMF', 'DFMF', 'MFDF',\n",
+       "       'DFFW'], dtype=object)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "players.Pos.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "def5d358",
+   "id": "dccab2de",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "idxs = np.where(leplayers.Pos"
+   ]
   }
  ],
  "metadata": {
