--- a/Notebooks/PL.ipynb
+++ b/Notebooks/PL.ipynb
@@ -11266,7 +11266,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "01420356",
+   "id": "3e7fab63",
    "metadata": {},
    "outputs": [
     {
@@ -11483,7 +11483,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "1ba53c4b",
+   "id": "0b7bdb98",
    "metadata": {},
    "outputs": [
     {
@@ -11530,7 +11530,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "6f0e307b",
+   "id": "f4d6d8bd",
    "metadata": {},
    "outputs": [
     {
@@ -11554,7 +11554,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "228cf0c7",
+   "id": "fcc8aab2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11567,7 +11567,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "c9066a3c",
+   "id": "4532c4fa",
    "metadata": {},
    "outputs": [
     {
@@ -11784,7 +11784,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "871e2bb2",
+   "id": "2de3f8d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11794,7 +11794,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "3ae4efe0",
+   "id": "d9bf1364",
    "metadata": {},
    "outputs": [
     {
@@ -12011,7 +12011,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "803b045a",
+   "id": "6aaadddd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12021,7 +12021,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "840e5382",
+   "id": "a5e126ff",
    "metadata": {},
    "outputs": [
     {
@@ -12658,7 +12658,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "b230f93f",
+   "id": "22d73303",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12668,7 +12668,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "5cc43541",
+   "id": "12e586fe",
    "metadata": {},
    "outputs": [
     {
@@ -12713,7 +12713,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "fc193d29",
+   "id": "9069f5c4",
    "metadata": {},
    "outputs": [
     {
@@ -12930,7 +12930,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "6166c55d",
+   "id": "7f5cc850",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12940,7 +12940,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "c8954817",
+   "id": "490d83ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12950,7 +12950,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "e022bff5",
+   "id": "2e9ec56f",
    "metadata": {},
    "outputs": [
     {
@@ -13139,8 +13139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "id": "14bc76e6",
+   "execution_count": 135,
+   "id": "41e02bad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13149,8 +13149,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 136,
+   "id": "bdc9026d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Tackles = DA[['Club','T_Mid3rd', 'T_Att3rd', 'T_Def3rd']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "2a7d31ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Tackles.to_excel('../Datasets/PL/Tackles.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3deec693",
+   "id": "31829863",
    "metadata": {},
    "outputs": [],
    "source": []
